--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.javainuse</groupId>
-	<artifactId>app</artifactId>
+	<artifactId>SpringBootHelloWorld</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>SpringBootHelloWorld</name>
@@ -39,12 +40,10 @@
 	</dependencies>
 
 	<build>
-	<finalName>app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				
 			</plugin>
 		</plugins>
 	</build>
