--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,7 +26,7 @@
   apiVersion: apps/v1
   kind: Service
   metadata:
-    name: kubernetes-app-master
+    name: kubernetes-service-master
   spec:
     type: NodePort
     selector:
