--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,8 +22,8 @@
         - containerPort: 8080
           name: http
           protocol: TCP
-          
-  apiVersion: apps/v1
+---         
+  apiVersion: v1
   kind: Service
   metadata:
     name: kubernetes-service-master
