--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <groupId>org.glassfish.jaxb</groupId>
     <artifactId>jaxb-runtime</artifactId>
     <version>2.3.2</version>
+	</dependency>
 
 	</dependencies>
 
